--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,29 @@ chess==1.11.2
     # via python-chess
 click==8.1.8
     # via pip-tools
+colorama==0.4.6
+    # via
+    #   build
+    #   click
+filelock==3.18.0
+    # via torch
+fsspec==2025.3.2
+    # via torch
+jinja2==3.1.6
+    # via torch
+markupsafe==3.0.2
+    # via jinja2
 mouseinfo==0.1.3
     # via pyautogui
+mpmath==1.3.0
+    # via sympy
+networkx==3.4.2
+    # via torch
 numpy==2.2.5
     # via
     #   -r requirements.in
     #   opencv-python
+    #   torchvision
 opencv-python==4.11.0.86
     # via -r requirements.in
 packaging==25.0
@@ -26,6 +43,7 @@ pillow==11.2.1
     # via
     #   -r requirements.in
     #   pytesseract
+    #   torchvision
 pip-tools==7.4.1
     # via -r requirements.in
 pyautogui==0.9.54
@@ -54,14 +72,20 @@ pytesseract==0.3.13
     # via -r requirements.in
 python-chess==1.999
     # via -r requirements.in
-python3-xlib==0.15
-    # via
-    #   mouseinfo
-    #   pyautogui
 pytweening==1.2.0
     # via pyautogui
 stockfish==3.28.0
     # via -r requirements.in
+sympy==1.14.0
+    # via torch
+torch==2.7.0
+    # via
+    #   -r requirements.in
+    #   torchvision
+torchvision==0.22.0
+    # via -r requirements.in
+typing-extensions==4.13.2
+    # via torch
 wheel==0.45.1
     # via pip-tools
 xxhash==3.5.0
