--- a/requirements.in
+++ b/requirements.in
@@ -6,6 +6,6 @@ pyautogui
 PyQt6
 python-chess
 stockfish
-torch
-torchvision
+torch --index-url https://download.pytorch.org/whl/cpu
+torchvision --index-url https://download.pytorch.org/whl/cpu
 xxhash
