--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ priority = "explicit"
 
 
 [tool.poetry.group.dev.dependencies]
-deptry = "^0.23.0"
+deptry = "*"
 
 [build-system]
 requires = ["poetry-core"]
